--- a/index.Rmd
+++ b/index.Rmd
@@ -544,7 +544,6 @@ class: clear
 
 .left-column[
 ###### Fino a ieri
-
 <br>
 .img-left[![](immagini/poppins-bag.gif)]
 ]
@@ -552,25 +551,30 @@ class: clear
 --
 
 .right-column[
-#### Un numero più una fonte "sicura" = Regola magica
+###### Un numero più una fonte "sicura" => Regola magica
+.font80[
 *"Prima di fare il bagno bisogna aspettare almeno 30 minuti"*
-
+]
 ]
 
 --
 
 .right-column[
-<br>
 
 ###### La statistica dei... luoghi comuni
-*"Se vuoi ispirare fiducia, dai molti dati statistici. Non importa che siano comprensibili, basta che siano in quantità sufficiente"*  
-(Lewis Carroll)
+.font80[
+*"Se vuoi ispirare fiducia, dai molti dati statistici. Non importa che siano comprensibili, basta che siano in quantità sufficiente"*
+  Lewis Carroll   
 
+*"Non mi fido molto delle statistiche, perché statisticamente un uomo con la testa nel forno acceso e i piedi nel congelatore ha una temperatura media"*
+  Charles Bukowski  
 
-Altri esempi: [*''raccolta'' Istat*](https://www.istat.it/it/archivio/16514)
+<br>
+Altri esempi:  
+-> [*''raccolta'' Istat*](https://www.istat.it/it/archivio/16514)
 
 ]
-
+]
 
 ---
 
@@ -578,7 +582,6 @@ class: clear
 
 .left-column[
 ###### Da domani
-
 <br>
 .img-left[![](immagini/poppins-bag-kids.gif)]
 ]
@@ -586,15 +589,19 @@ class: clear
 --
 
 .right-column[
-#### La regola delle 3C
-#### .mid-warm-grey[CUBe's formula: `*Check x understand x be aware*`]
-1. .hl[**C**ontrollare], dato e percezioni sono confrontabili? E il contrario?  
-.mid-warm-grey[*[**C**heck]*]  
-2. .hl[**C**omprendere il senso], l'uso dei dati ha senso rispetto al contesto?  
-.mid-warm-grey[*[**U**nderstand  the context]*]  
-3. Essere .hl[**c**onsapevoli], sappiamo perché stiamo usando (o vorremmo usare) questa fonte di dati?  
-.mid-warm-grey[*[**Be** aware of the source]*]
+###### La regola delle 3C
+###### .mid-warm-grey[CUBe's formula: `*Check x understand x be aware*`]
+.font80[
+1. .hl[**C**ontrollare], .mid-warm-grey[*[**C**heck]*]  
+dato e percezioni sono confrontabili? E il contrario?  
+.white[-]  
+2. .hl[**C**omprendere il senso], .mid-warm-grey[*[**U**nderstand  the context]*]  
+l'uso dei dati ha senso rispetto al contesto?  
+.white[-]  
+3. Essere .hl[**c**onsapevoli], .mid-warm-grey[*[**Be** aware of the source]*]  
+sappiamo perché stiamo usando (o vorremmo usare) questa fonte di dati?
 
+]
 ]
 
 ---
