--- a/index.Rmd
+++ b/index.Rmd
@@ -46,6 +46,17 @@ class: title-slide clear
 
 ##### *Melide, 18 novembre 2021*
 
+---
+class: clear, middle
+
+.font110[
+*"Non mi fido molto delle statistiche, perché un uomo con la testa nel forno acceso e i piedi nel congelatore statisticamente  ha una temperatura media"*
+]
+.dark-warm-grey[
+.font80[
+Charles Bukowski
+]
+]
 
 ---
 class: clear, middle
@@ -53,6 +64,8 @@ class: clear, middle
 #### Dati, statistica pubblica e giornalismo
 
 --
+
+
 
 <br>
 ### ***Vademecum***
@@ -64,8 +77,6 @@ class: clear, middle
 
 --
 3. La *statistica pubblica e il giornalismo*, con quale ruolo?  
-
-
 
 ---
 
